...
    case medalStar
    case flagPatternCheckered

    public var name: String? {
        switch self {
        case .closeCircleFill:
            "xmark.circle.fill"
        case .magnifyingGlass:
            "magnifyingglass"
        default:
            nil
        }
    }

    public static func `for`(
...
