...
        textView.adjustsFontForContentSizeCategory = true
        textView.isScrollEnabled = false
        textView.backgroundColor = .clear
        textView.font = WMFFont.for(.title3)
        textView.textContainerInset = .zero
        textView.textContainer.lineFragmentPadding = 0
        textView.accessibilityIdentifier = "commons-caption-edit-text-view"
        textView.delegate = self
        textView.heightAnchor.constraint(greaterThanOrEqualToConstant: 44).isActive = true
        return textView
    }()

    private lazy var placeholderLabel: UILabel = {
...
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.titleLabel?.font = WMFFont.for(.semiboldHeadline)
        button.titleLabel?.adjustsFontForContentSizeCategory = true
        button.layer.cornerRadius = 23
        button.clipsToBounds = true
        button.accessibilityIdentifier = "commons-caption-edit-publish-button"
        button.heightAnchor.constraint(equalToConstant: 46).isActive = true
        button.addTarget(self, action: #selector(didTapPublish), for: .touchUpInside)
        return button
    }()

    // MARK: - Lifecycle
...
