...
    private lazy var addTagButton: UIButton = {
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.titleLabel?.font = WMFFont.for(.headline)
        button.titleLabel?.adjustsFontForContentSizeCategory = true
        button.contentHorizontalAlignment = .leading
        button.accessibilityIdentifier = "commons-tags-edit-add-button"
        button.addTarget(self, action: #selector(didTapAddTag), for: .touchUpInside)
        return button
    }()

    private lazy var cc0Label: UILabel = {
        let label = UILabel()
...
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.titleLabel?.font = WMFFont.for(.semiboldHeadline)
        button.titleLabel?.adjustsFontForContentSizeCategory = true
        button.layer.cornerRadius = 23
        button.clipsToBounds = true
        button.accessibilityIdentifier = "commons-tags-edit-publish-button"
        button.heightAnchor.constraint(equalToConstant: 46).isActive = true
        button.addTarget(self, action: #selector(didTapPublish), for: .touchUpInside)
        return button
    }()

    // MARK: - Lifecycle
...
